css/index.css
@import url("https://fonts.googleapis.com/css2?family=Gentium+Plus:wght@400;700&display=swap");

[data-theme=dark] {
    --text-color: hsl(0, 0%, 80%);
    --background-color: hsl(0, 0%, 15%);
    --header-color: hsl(0, 0%, 17%);
    --header-shadow: hsl(0, 0%, 12%);
    --nav-color: hsl(0, 0%, 20%);
    --nav-text: white;
    --content-button-border: hsl(0, 0%, 80%);
}

[data-theme=light] {
    --text-color: hsl(0, 0%, 15%);
    --background-color: hsl(0, 0%, 80%);
    --header-color: hsl(0, 0%, 75%);
    --header-shadow: hsl(0, 0%, 65%);
    --nav-color: hsl(0, 0%, 65%);
    --nav-text: black;
    --content-button-border: hsl(0, 0%, 15%);
    ;
}

html {
    font-size: 16px;
    font-family: "Gentium Plus", serif;
    font-weight: 400;
}

body {
    display: block;
    padding: 0;
    margin: 0; 
    color: var(--text-color);
    background-color: var(--background-color);
    min-height: 100vh;
    height: 100%;
    margin: 0;
}

header {
    padding: 5px 15px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: fixed;
    top: 0;
    left: 0;
    background-color: var(--header-color);
    box-shadow: 0 1px 3px var(--header-shadow);
    width: calc(100vw - 30px);
    z-index: 1;
}

header div {
    display: flex;
}

.logo {
    font-weight: 700;
    font-size: 24px;
    margin: 0;
    letter-spacing: 3px;
    color: inherit;
    text-decoration: none;
}

nav {
    display: none;
    position: absolute;
    right: 10px;
    top: 60px;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 5px;
    padding: 10px;
    background-color: var(--nav-color);
    box-shadow: 0 1px 3px var(--header-shadow);
    color: var(--nav-text);
}

nav a {
    background-color: inherit;
    font-size: 20px;
    color: inherit;
    border: none;
    font-family: inherit;
    font-weight: inherit;
    text-decoration: none;
    letter-spacing: 3px;
    text-align: center;
    border-bottom: 1px solid var(--text-color);
}
 
.visible {
    display: flex;
}

.menuButton, .themeSwitch {
    background-color: inherit;
    border: none;
}

.menuButton:focus, .themeSwitch:focus {
    outline: none
}

.menuButton img, .themeSwitch img {
    width: 20px;
    height: auto;
    color: var(--text-color)
}

.menuAnimation {
    animation-name: rotate;
    animation-duration: 0.2s;
    animation-fill-mode: forwards;
}

.menuAnimationReverse {
    animation-name: unrotate;
    animation-duration: 0.2s;
    animation-fill-mode: forwards;
}

@keyframes rotate {
    100% {
        transform: rotate(90deg);
    }
}

@keyframes unrotate {
    0% {
        transform: rotate(90deg);
    }

    100% {
        transform: rotate(0deg);
    }
}

@media (min-width: 992px) {
    header {
        padding: 5px 15px;
    }

    .themeIcon {
        padding: 0 15px;
    }

    .menuIcon {
        display: none;
    }

    nav {
        display: flex;
        flex-direction: row;
        position: initial;
        gap: 20px;
        background-color: inherit;
        align-items: flex-end;
        box-shadow: none;
        padding: 20px;
        margin-right: 15px;
    }

    .menuButton {
        display: none;
    }

    .themeSwitch {
        margin-right: 20px;
    }
}

main {
    padding: 0 15px;
    padding-top: 60px;
    position: relative;
    max-width: 600px;
    margin: 0 auto;
    min-height: 75vh;
}

h1 {
    width: 100%;
    text-align: center;
}

